--- a/nhung.html
+++ b/nhung.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <button type="button" onclick="boynhangheo();">Click me</button>
-<script src="Index.js">
+<script src="jsnhung.js">
 </script>
 </body>
 </html>
